# Meshing

./: .git-blame-ignore-revs  .gitignore  .gitmodules  README.md
GocadRelatedScripts/: ChangeDepthPl.py  Face.py  convertInp.py  convertTs2Stl.py  convertinp2ts.py  createFaultFromCurve.py  createGOCADTSurf.py  createGOCADTSurfNXNY.py  createGOCADTSurfNXNY_ascii_esri.py  createGOCADTSurfNXNY_netcdf.py  createGOCADTSurfSparseStructured.py  projTs.py  refine_and_smooth_mesh.py
GocadRelatedScripts/ExampleFiles/: ExampleCurve_createFaultFromCurve.pl
GocadRelatedScripts/ExampleFiles/SimModeler_workflow/: create_box.geo
SimModelerDownloadingBuilding/: README.md  downloadSimLib.sh
SimModelerDownloadingBuilding/SimModelerCustomization/: README.md
SimModelerDownloadingBuilding/SimModelerCustomization/attDefs/: seisSol.adi
SimModelerDownloadingBuilding/SimModelerCustomization/attDefs/simSeisSol/: seisSol.adi
SimModelerDownloadingBuilding/SimModelerCustomization/attDefs/simSeisSol/.svn/: wc.db
analyse_communication/: SConstruct
analyse_communication/src/: Graph.cpp  Graph.h  PartitionReader.cpp  PartitionReader.h  SConscript  main.cpp
check_correctness/: CMakeLists.txt  README.md
check_correctness/src/: main.cpp  mesh.cpp  mesh.h
check_mesh/: CMakeLists.txt  README.md
check_mesh/src/: mesh.cpp  mesh.h
cmake/: README.md
common/: PartitionReader.cpp  PartitionReader.h
creating_geometric_models/: Face.py  Grid.py  change_depth_pl_curve.py  convertInp.py  convertTs.py  create_fault_from_trace.py  create_surface_from_one_dim_structured_grid.py  create_surface_from_rectilinear_grid.py  create_surface_from_structured_grid.py  generate_box.py  generate_cutting_plane.py  generate_trace_terminal_splay.py  projTs.py  refine_and_smooth_mesh.py  requirements.txt  triangulate_point_cloud_and_clean_up.py
creating_geometric_models/ExampleFiles/SimModeler_workflow/: create_box.geo
cube_c/: CMakeLists.txt  cmake  submodules
estimate_runtime/: SConstruct
estimate_runtime/site_scons/: libs  utils
estimate_runtime/src/: SConscript  main.cpp
evaluate_material/: CMakeLists.txt  README.md
evaluate_material/src/: main.cpp  mesh.cpp  mesh.h  parameterDB.cpp  parameterDB.h  writer.cpp  writer.h
extract_timesteps/: SConstruct
extract_timesteps/src/: SConscript  SeismicVelocity.cpp  SeismicVelocity.h  Writer.cpp  Writer.h  main.cpp
gmsh2gambit/: CMakeLists.txt  README.md  SConstruct
gmsh2gambit/src/: GAMBITWriter.h  GMSH.h
mirrorMesh/: mirrorMesh.py
netcdf2xdmf/: SConstruct
netcdf2xdmf/site_scons/: libs  site_tools  utils
netcdf2xdmf/src/: SConscript  main.cpp
place_receivers/: CMakeLists.txt  README.md  SConstruct
place_receivers/src/: Geometry.cpp  Geometry.h  KDTree.cpp  KDTree.h  LinearReceiverSearch.h  Reader.cpp  Reader.h  SConscript  main.cpp
point_in_mesh/: CMakeLists.txt  README.md
point_in_mesh/src/: Geometry.cpp  Geometry.h  Point.h  Reader.cpp  Reader.h  main.cpp
pumlcube/: CMakeLists.txt
pumlcube/src/: main.cpp
remove-groups/: CMakeLists.txt  README.md  submodules
remove-groups/src/: Filter.h  Reader.cpp  Reader.h  Writer.h  main.cpp  utils
subdivide_mesh/: seissolxdmfwriter.py  subdivide_mesh.py
test_communication_pattern/: SConstruct
test_communication_pattern/src/: Comm.cpp  Comm.h  SConscript  main.cpp
vizualizeBoundaryConditions/: vizualizeBoundaryConditions.py
